# edu_modules_project

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
modules/: models.py  paginators.py  serializers.py  tests.py  urls.py  validators.py  views.py
modules/migrations/: 0001_initial.py  0002_alter_modules_title.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
